// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AwesomeButton should render 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="aws-btn-content-view"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "transparent",
        "height": 60,
        "opacity": 0,
        "width": undefined,
        "zIndex": 10,
      }
    }
    testID="aws-btn-content-2"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "rgba(0, 0, 0, 0.15)",
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 4,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "bottom": -2,
          "height": 56,
          "left": "1%",
          "position": "absolute",
          "transform": [
            {
              "translateY": 0,
            },
          ],
          "width": "98%",
        }
      }
      testID="aws-btn-shadow"
    />
    <View
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
          },
          {
            "backgroundColor": "#9f9f9f",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 4,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "height": 56,
            "width": undefined,
          },
        ]
      }
      testID="aws-btn-bottom"
    />
    <View
      collapsable={false}
      style={
        {
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 4,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "height": 56,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "transform": [
            {
              "translateY": 0,
            },
          ],
          "width": undefined,
        }
      }
      testID="aws-btn-content"
    >
      <View
        onLayout={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "overflow": "hidden",
              "zIndex": 3,
            },
            {
              "backgroundColor": "#c0c0c0",
              "borderBottomLeftRadius": undefined,
              "borderBottomRightRadius": undefined,
              "borderColor": undefined,
              "borderRadius": 4,
              "borderTopLeftRadius": undefined,
              "borderTopRightRadius": undefined,
              "borderWidth": 0,
            },
          ]
        }
        testID="aws-btn-text"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "rgba(0, 0, 0, 0.15)",
              "height": 56,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "width": undefined,
            }
          }
          testID="aws-btn-active-background"
        />
        <View
          onLayout={[Function]}
          style={
            [
              {
                "overflow": "hidden",
                "width": "55%",
              },
              {
                "backgroundColor": "rgba(0, 0, 0, 0.15)",
                "height": 20,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.15)",
                "height": 20,
                "transform": [
                  {
                    "translateX": -0,
                  },
                ],
                "width": "100%",
              }
            }
            testID="aws-btn-content-placeholder"
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`AwesomeButton should render a default text children 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="aws-btn-content-view"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "transparent",
        "height": 60,
        "opacity": 0,
        "width": undefined,
        "zIndex": 10,
      }
    }
    testID="aws-btn-content-2"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "rgba(0, 0, 0, 0.15)",
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 4,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "bottom": -2,
          "height": 56,
          "left": "1%",
          "position": "absolute",
          "transform": [
            {
              "translateY": 0,
            },
          ],
          "width": "98%",
        }
      }
      testID="aws-btn-shadow"
    />
    <View
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
          },
          {
            "backgroundColor": "#9f9f9f",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 4,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "height": 56,
            "width": undefined,
          },
        ]
      }
      testID="aws-btn-bottom"
    />
    <View
      collapsable={false}
      style={
        {
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 4,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "height": 56,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "transform": [
            {
              "translateY": 0,
            },
          ],
          "width": undefined,
        }
      }
      testID="aws-btn-content"
    >
      <View
        onLayout={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "overflow": "hidden",
              "zIndex": 3,
            },
            {
              "backgroundColor": "#c0c0c0",
              "borderBottomLeftRadius": undefined,
              "borderBottomRightRadius": undefined,
              "borderColor": undefined,
              "borderRadius": 4,
              "borderTopLeftRadius": undefined,
              "borderTopRightRadius": undefined,
              "borderWidth": 0,
            },
          ]
        }
        testID="aws-btn-text"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "rgba(0, 0, 0, 0.15)",
              "height": 56,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "width": undefined,
            }
          }
          testID="aws-btn-active-background"
        />
        <View
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
              "paddingBottom": 0,
              "paddingHorizontal": 16,
              "paddingTop": 0,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontWeight": "bold",
                  "textAlign": "center",
                  "zIndex": 10,
                },
                {
                  "color": "#FFFFFF",
                  "fontFamily": undefined,
                  "fontSize": 14,
                },
              ]
            }
            testID="aws-btn-content-text"
          >
            Default
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
